--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1673,9 +1673,7 @@
             android:background="@color/bg_grey"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:splitMotionEvents="false"
-            android:animateLayoutChanges="true"
-            >
+            android:splitMotionEvents="false" >
 
             <RelativeLayout
                 android:id="@+id/profileRl"
@@ -1719,7 +1717,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="20px"
+                android:layout_marginTop="40px"
                 >
 
                 <LinearLayout
@@ -1754,7 +1752,7 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20px" >
+                android:layout_marginTop="40px" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -1936,6 +1934,45 @@
                             android:layout_alignParentBottom="true"
                             android:background="@drawable/menu_divider" />
                     </RelativeLayout>
+
+
+                    <RelativeLayout
+                        android:id="@+id/relativeLayoutSuperDrivers"
+                        android:layout_width="match_parent"
+                        android:layout_height="84px"
+                        android:background="@drawable/menu_item_selector"
+                        android:splitMotionEvents="false" >
+
+                        <TextView
+                            android:id="@+id/textViewSuperDrivers"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="42px"
+                            android:text="Super Drivers"
+                            android:textColor="@color/white"
+                            android:textSize="34px" />
+
+
+                        <ImageView
+                            android:layout_width="50px"
+                            android:layout_height="50px"
+                            android:tag="mwar"
+                            android:src="@drawable/ic_super_star"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="40px"
+                            android:layout_toRightOf="@+id/textViewSuperDrivers"
+
+                            />
+
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="3px"
+                            android:layout_alignParentBottom="true"
+                            android:background="@drawable/menu_divider" />
+                    </RelativeLayout>
+
 
                     <RelativeLayout
                         android:id="@+id/helpRl"
