--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -7,6 +7,8 @@
    
    <color name="black">#202020</color>
    <color name="black_light">#505050</color>
+
+    <color name="black_grey">#575757</color>
    
    <color name="black_text_shop">#1C1C1C</color>
    
