--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_leaderboard.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:id="@+id/linearLayoutRoot"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="720px"
     android:layout_height="1134px"
     android:background="@color/white"
     android:orientation="vertical"
-    android:splitMotionEvents="false" >
+    android:splitMotionEvents="false"
+    android:animateLayoutChanges="true">
 
     <RelativeLayout
         android:id="@+id/relativeLayoutTop"
         android:layout_width="match_parent"
         android:layout_height="90px"
         android:background="@color/bg_grey_opaque"
-        android:splitMotionEvents="false" >
+        android:splitMotionEvents="false">
 
         <Button
             android:id="@+id/buttonBack"
@@ -20,7 +22,7 @@
             android:layout_height="82px"
             android:layout_centerVertical="true"
             android:background="@drawable/back_btn_selector"
-            android:tag="mwar" />
+            android:tag="mwar"/>
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -30,30 +32,164 @@
             android:gravity="center"
             android:text="SUPER DRIVERS"
             android:textColor="@color/white"
-            android:textSize="48px" />
+            android:textSize="48px"/>
     </RelativeLayout>
 
 
     <TextView
-        android:id="@+id/textViewCurrentPosition"
+        android:id="@+id/textViewPositionTop"
         android:layout_width="match_parent"
-        android:layout_height="80px"
+        android:layout_height="wrap_content"
         android:background="@color/black_grey"
+        android:gravity="center"
+        android:padding="20px"
+        android:text="Your position in Chandigarh : 25/449"
+        android:textColor="@color/white"
+        android:textSize="34px"
+
+        />
+
+    <TextView
+        android:id="@+id/textViewPositions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="35px"
+        android:gravity="center"
+        android:text="POSITIONS"
+        android:textColor="@color/bg_grey_opaque"
+        android:textSize="38px"
+
+        />
+
+    <TextView
+        android:id="@+id/textViewNoRides"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="20px"
+        android:layout_marginTop="20px"
+        android:gravity="center"
+        android:text="No of rides"
+        android:textColor="@color/bg_grey"
+        android:textSize="30px"
 
         />
 
 
+    <ListView
+        android:id="@+id/listViewDriverLB"
+        android:layout_width="match_parent"
+        android:layout_height="610px"
+        android:divider="@color/black_translucent"
+        android:dividerHeight="1px"
+        android:listSelector="@drawable/transparent"
+        android:splitMotionEvents="false">
+    </ListView>
 
 
-        <ListView
-            android:id="@+id/listViewDriverLB"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginTop="54px"
+        android:src="@color/black_translucent"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70px"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        android:animateLayoutChanges="true"
+        >
+
+        <TextView
+            android:id="@+id/textViewDaily"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Daily"
+            android:textColor="@drawable/text_color_bg_grey_selector"
+            android:textSize="30px"
+            android:background="@drawable/background_white_white_light_grey_selector"
+            />
+        <ImageView
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5px"
+            android:layout_marginTop="5px"
+            android:src="@color/black_translucent"
+            />
+        <TextView
+            android:id="@+id/textViewWeekly"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Weekly"
+            android:textColor="@drawable/text_color_bg_grey_selector"
+            android:textSize="30px"
+            android:background="@drawable/background_white_white_light_grey_selector"
+            />
+        <ImageView
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5px"
+            android:layout_marginTop="5px"
+            android:src="@color/black_translucent"
+            />
+        <TextView
+            android:id="@+id/textViewMonthly"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Monthly"
+            android:textColor="@drawable/text_color_bg_grey_selector"
+            android:textSize="30px"
+            android:background="@drawable/background_white_white_light_grey_selector"
+            />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:src="@color/black_translucent"
+        />
+
+
+    <RelativeLayout
+        android:id="@+id/relativeLayoutPositionBottom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background_white_white_light_grey_selector"
+        >
+        <TextView
+            android:id="@+id/textViewPositionBottom"
             android:layout_width="match_parent"
-            android:layout_height="576px"
-            android:divider="@color/black_translucent"
-            android:dividerHeight="2px"
-            android:listSelector="@drawable/transparent"
-            android:splitMotionEvents="false" >
-        </ListView>
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:padding="20px"
+            android:text="Your overall position : 25/449"
+            android:textColor="@drawable/text_color_bg_grey_selector"
+            android:textSize="34px"
+
+            />
+
+
+        <ImageView
+            android:layout_width="40px"
+            android:layout_height="38px"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20px"
+            android:src="@drawable/arrow_selector"
+            android:tag="mwar"
+            />
+
+
+    </RelativeLayout>
 
 
 </LinearLayout>
