--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1673,7 +1673,8 @@
             android:background="@color/bg_grey"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:splitMotionEvents="false" >
+            android:splitMotionEvents="false"
+            android:animateLayoutChanges="true">
 
             <RelativeLayout
                 android:id="@+id/profileRl"
